<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="285dp"
        android:layout_height="47dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHint="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/phone_no"
        android:inputType="phone"
        android:textColorHint="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSex"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextSex"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/sex"
        android:inputType="textPersonName"
        android:textColorHint="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="145dp"
        android:text="@string/already_a_user_kindly_login"
        android:textColor="#fff"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignup" />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="50dp"
        android:text="@string/register"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>