<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Testimonials"
    tools:showIn="@layout/activity_testimonials">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/profile"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/excellent_properties_at_excellent_prices_they_are_legit"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/profile"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/thanksss12"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/profile"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/tested_and_trusted_no_doubts1"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>




        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/profile"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/god_bless_fisherman_properties_they_have_helped_me_a_lot1"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/profile"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/great_job_thank_you_so_much"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:layout_margin="5dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/profile"
                android:contentDescription="@string/todo"/>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/excellent_you_guys_rock_100"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:layout_margin="5dp"/>

        </LinearLayout>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>